05/06/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ingress
spec:
  type: ClusterIP
  selector:
    app: mi-ingress
  ports:
    - port: 80
      targetPort: 80
