05/06/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gke
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-ingress
            port:
              number: 80
      - path: /development
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-ingress
            port:
              number: 80
